--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.26.0",
+    "flexlayout-react": "^0.5.5",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
