--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-logger": "^1.1.0",
+    "react-notifications": "^1.7.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
